WIP make sure that canvas is visible

--- a/frontend/stylesheets/layout.less
+++ b/frontend/stylesheets/layout.less
@@ -32,3 +32,13 @@
   position: absolute;
   overflow: hidden;
 }
+
+.flexlayout__tab {
+  background-color: transparent;
+}
+.flexlayout__tabset {
+  background-color: transparent;
+}
+.flexlayout__tab_border {
+  background-color: white;
+}
